--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@ body {
     color: white;
 }
 
+.taghelper {
+    margin: 0 auto;
+    max-width: 75%;
+}
+
 .taghelper-button {
     width: 100%;
     height: 100%;
@@ -31,13 +36,15 @@ body {
     border-radius: 5px;
 }
 
-.taghelper-sitetypes, .site-tpph-rooms, .site-tpph-waves {
+.taghelper-sitetypes,
+.site-tpph-rooms,
+.site-tpph-waves {
     display: grid;
     width: 400px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: 40px;
     gap: 10px;
-    
+
 }
 
 .site-nrf-waves {
